# mgstudio

./: .gitignore  README.md  mgstudio  mgstudio-dev  mgstudio-install.sh
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
docs/: ARCHIVED_CHECKLIST.md  BEVY_BASELINE.md  BEVY_RENDER_FILE_MAPPING.md  BEVY_RS_TO_MBT_PATH_AUDIT.md  CREDITS.md  PARITY_GATES.md  RENDER_PARITY_TRACKER.md  ROADMAP_CHECKLIST.md  todolist.md
mgstudio-cli/: .gitignore  README.mbt.md  build.js  moon.mod.json  moon_cc.sh
mgstudio-cosmic/: README.mbt.md  moon.mod.json
mgstudio-engine/: .gitignore  README.mbt.md  assets_shader_tests_shader_loader_dep_wgsl.mbt  assets_shader_tests_shader_loader_root_wgsl.mbt  assets_shaders_animate_shader_wgsl.mbt  assets_shaders_array_texture_wgsl.mbt  assets_shaders_automatic_instancing_wgsl.mbt  assets_shaders_bindless_material_wgsl.mbt  assets_shaders_compute_mesh_wgsl.mbt  assets_shaders_cubemap_unlit_wgsl.mbt  assets_shaders_custom_clustered_decal_wgsl.mbt  assets_shaders_custom_gltf_2d_wgsl.mbt  assets_shaders_custom_material_2d_wgsl.mbt  assets_shaders_custom_material_import_wgsl.mbt  assets_shaders_custom_material_screenspace_texture_wgsl.mbt  assets_shaders_custom_material_wgsl.mbt  assets_shaders_custom_phase_item_wgsl.mbt  assets_shaders_custom_stencil_wgsl.mbt  assets_shaders_custom_ui_material_wgsl.mbt  (+103 more)
mgstudio-page/: README.md  (+3 more)
mgstudio-runtime/native-wasmtime/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
mgstudio-runtime/native-wasmtime/src/: gpu_backend.rs  host.rs  main.rs  native_window.rs  source_spec.rs  wasmtime_runner.rs
(+5559 files in other folders)
